--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -23,3 +23,13 @@
                         {% if site.zhihu %}<a class="social-btn" href="https://www.zhihu.com/people/{{ site.zhihu }}" target="_blank"><i class="fa fa-lg fa-fw"><img src="{{ site.url }}/assets/img/favicons/zhihu.ico"></i></a>{% endif %}
                         {% if site.bilibili %}<a class="social-btn" href="http://space.bilibili.com/{{ site.bilibili }}/#!/qz-index/" target="_blank"><i class="fa fa-lg fa-fw"><img src="{{ site.url }}/assets/img/favicons/bilibili.ico"></i></a>{% endif %}
                   </h3>
+<script async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+
+<span id="busuanzi_container_site_uv">
+  Visitors:<span id="busuanzi_value_site_uv"></span>
+  <span>    </span>
+  <span>    </span>
+  <span>    </span>
+  <span>    </span>
+  Number of Visits:<span id="busuanzi_value_site_pv"></span>
+</span>
