--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -25,11 +25,11 @@
                   </h3>
 <script async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 
-<span id="busuanzi_container_site_uv">
+<!---<span id="busuanzi_container_site_uv">
   Visitors:<span id="busuanzi_value_site_uv"></span>
   <span>    </span>
   <span>    </span>
   <span>    </span>
   <span>    </span>
   Number of Visits:<span id="busuanzi_value_site_pv"></span>
-</span>
+</span>-->
